--- a/MBIMProbe/MBIMProbe-10.11-Info.plist
+++ b/MBIMProbe/MBIMProbe-10.11-Info.plist
@@ -27,11 +27,11 @@
 		<key>MBIM IAD Selection</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>net.shmessenger.darwin.${PRODUCT_NAME:rfc1034identifier}</string>
+			<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 			<key>IOClass</key>
-			<string>${PRODUCT_NAME}</string>
+			<string>${PROJECT_NAME}</string>
 			<key>IOProviderClass</key>
-			<string>IOUSBDevice</string>
+			<string>IOUSBHostDevice</string>
 			<key>IOProviderMergeProperties</key>
 			<dict>
 				<key>DeviceModemOverrides</key>
@@ -64,6 +64,21 @@
 			<integer>1</integer>
 			<key>bDeviceSubClass</key>
 			<integer>2</integer>
+		</dict>
+		<key>ZTE ANY</key>
+		<dict>
+			<key>CFBundleIdentifier</key>
+			<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+			<key>IOClass</key>
+			<string>$(PROJECT_NAME)</string>
+			<key>IOProviderClass</key>
+			<string>IOUSBHostDevice</string>
+			<key>bcdDevice</key>
+			<string>*</string>
+			<key>idProduct</key>
+			<string>*</string>
+			<key>idVendor</key>
+			<string>6610</string>
 		</dict>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
